# git-spawn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml
examples/: clone_and_log.rs  commit_counter.rs  status_summary.rs
src/: branches.rs  changes.rs  command.rs  conflicts.rs  error.rs  history.rs  hooks.rs  info.rs  lib.rs  parse.rs  patches.rs  remotes.rs  repo.rs  search.rs  signing.rs  stashes.rs  tags.rs  workflow.rs
src/command/: add.rs  am.rs  apply.rs  bisect.rs  blame.rs  branch.rs  cat_file.rs  checkout.rs  cherry.rs  cherry_pick.rs  clean.rs  clone.rs  commit.rs  config.rs  describe.rs  diff.rs  fetch.rs  for_each_ref.rs  format_patch.rs  gc.rs  grep.rs  hash_object.rs  init.rs  interpret_trailers.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  mv.rs  notes.rs  pull.rs  push.rs  range_diff.rs  rebase.rs  reflog.rs  remote.rs  reset.rs  restore.rs  rev_parse.rs  revert.rs  (+14 more)
src/parse/: bisect.rs  blame.rs  cherry.rs  cherry_pick.rs  commit.rs  diff.rs  log.rs  ls_tree.rs  merge.rs  notes.rs  pull.rs  rebase.rs  reflog.rs  shortlog.rs  show.rs  status.rs  submodule.rs
tests/: advanced.rs  advanced_args.rs  build_args.rs  notes.rs  plumbing.rs  porcelain.rs  workflow.rs
tests/common/: mod.rs
