[package]
name = "git-wrapper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "A Git CLI wrapper for Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/joshrotenberg/git-wrapper"
homepage = "https://github.com/joshrotenberg/git-wrapper"
documentation = "https://docs.rs/git-wrapper"
keywords = ["git", "cli", "wrapper", "vcs"]
categories = ["development-tools", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["parse"]
parse = []
serde = ["dep:serde"]

[dependencies]
tokio = { version = "1.46", features = [
    "process",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "sync",
] }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
which = "8.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.0"
tracing-subscriber = "0.3"
serial_test = "3.3.1"
