[package]
name = "git-spawn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "Async wrapper around the git CLI: builder commands, typed parsers, high-level workflow helpers"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/joshrotenberg/git-spawn"
homepage = "https://github.com/joshrotenberg/git-spawn"
documentation = "https://docs.rs/git-spawn"
keywords = ["git", "cli", "wrapper", "vcs"]
categories = ["development-tools", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["parse"]
parse = []
serde = ["dep:serde"]
workflow = ["parse"]

[dependencies]
tokio = { version = "1.46", features = [
    "process",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "sync",
] }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
which = "8.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.0"
tracing-subscriber = "0.3"
serial_test = "3.3.1"
